--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
 body {
     background-color: #FEFAE0;
+    height: 100%;
 }
 
 header {
-    position: fixed; 
+    position: sticky; 
     left: 0;
     right: 0;
     display: flex;
@@ -18,6 +19,7 @@ header {
     padding: 10px 40px; 
     background-color: #CCD5AE; 
     margin: 0;
+    height: 50px;
 }
 
 .topBarLeft {
@@ -37,4 +39,67 @@ a {
     font-family: Sans-serif;
     color: #190C00;
     text-decoration: none;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #E9EDC9;
+    padding: 20px;
+    height: calc((100vh - 50px)*.45);
+}
+
+.hero-text {
+    width: 50%;
+}
+
+.hero-text h1 {
+    font-size: 4em;
+    text-align: end
+}
+
+.hero-text p {
+    font-size: 1.2em;
+    text-align: end;
+}
+
+.bottom {
+    display: flex;
+    height: calc((100vh - 50px)*.55);
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+h2 {
+    text-align: center;
+    font-size: 2em;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #FAEDCD;
+    width: 20vw;
+    height: 250px;
+    border: solid 6px #D4A373;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.card span {
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.card .icon {
+    color: #D4A373;
+    size: 5em;
 }
