--- a/carpool/style.css
+++ b/carpool/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #FEFAE0;
+    background-color: #fcf3d6;
 }
 
 header {
@@ -37,4 +37,58 @@ a {
     font-family: Sans-serif;
     color: #190C00;
     text-decoration: none;
+}
+
+.live-posts-section {
+    float: left;
+    padding: 100px;
+    /*background: blue;*/
+    
+}
+
+.live-posts{
+    /* make height flexible */ 
+    
+    background-color: white;
+    width: 500px;
+    height: 350px;
+    padding: 10px;
+    border: 30px solid #d6ddba;
+}
+
+.user_section{
+    position: top right;
+    background-color: #d6ddba;
+}
+
+.create-a-post-section{
+    float: left;
+    padding:100px;
+    /*  background: red; */ 
+}
+
+.create-a-post{
+    background-color:#d6ddba;
+    padding: 15px;
+
+}
+
+.left{
+    float: left;
+}
+
+.right{
+    float: right;
+}
+
+.button{
+    background-color: #cfa381;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
