--- a/suggest/style.css
+++ b/suggest/style.css
@@ -1,38 +1,37 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #FEFAE0;
+  background-color: #FEFAE0;
+  font-family: 'IBM Plex Sans', sans-serif;
+  color: #190C00;
 }
 
-a {
-    font-family: Sans-serif;
-    color: #190C00;
-    text-decoration: none;
+.hero h1, .hero h2 {
+  text-align: center;
+  color: #190C00;
+  font-family: 'Space Mono', monospace;
 }
 
-h1 {
+.hero h1 {
   font-size: 4em;
 }
 
-h1, h2 {
-    text-align: center;
-    color: #190C00;
-    font-family: 'Space Mono';
+.hero h2 {
+  font-weight: lighter;
 }
 
-h2 {
-  font-weight: lighter;
-  text-align: center;
+a {
+  font-family: sans-serif;
   color: #190C00;
+  text-decoration: none;
 }
 
 label {
-  color: #190C00;
-  font-family: 'IBM Plex Sans';
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .hero {
@@ -42,34 +41,24 @@ label {
   flex-direction: column;
   justify-content: center;
 }
-  
-/* input {
-  color: #190C00;
-  display: block;
-  margin: 10px auto;
-  border: #FAEDCD;
-  border-radius: 5px;
-} */
-  
-button {
-  background-color: #D4A373;
-  color: #190C00;
-  border: #190C00;
-  border-radius: 5px;
-}
 
-.form-container {
+#form-container {
   max-width: 600px;
   margin: 20px auto 50px auto;
   padding: 20px;
   background-color: #FEFAE0;
   border-radius: 10px;
 }
-  
+
 form {
   display: flex;
   flex-direction: column;
   gap: 15px;
+}
+
+#submit-div {
+  display: flex;
+  justify-content: center;
 }
 
 .text-input {
@@ -85,23 +74,25 @@ textarea {
   height: 100px;
   resize: vertical;
 }
-  
-.button-group {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
-}
 
-#submit {
-  padding: 10px 20px;
-  font-size: 18px;
+#submit, #new-form-button {
   background-color: #D4A373;
   color: #190C00;
   border: 1px solid #190C00;
   border-radius: 5px;
   cursor: pointer;
-  width: 100px;
+  padding: 10px 20px;
+  font-size: 18px;
+}
+
+#new-form-button {
+  margin-top: 20px;
+}
+
+#confirmation-message {
+  height: auto;
+  flex-direction: column;
+  align-items: center;
 }
 
 .required {
@@ -109,11 +100,13 @@ textarea {
   margin-left: 3px;
 }
 
-#submit-div {
+.button-group {
   display: flex;
   justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
 }
-  
+
 @media (max-width: 600px) {
   .button-group {
     flex-direction: column;
