--- a/sorry/style.css
+++ b/sorry/style.css
@@ -4,22 +4,81 @@
     box-sizing: border-box;
     font-family: 'IBM Plex Sans', sans-serif;
 }
+header {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 10px 40px; 
+    margin: 0;
+    height: 50px;
+    background-color: #CCD5AE; 
+    width: 100%; 
+    z-index: 1000; 
+}
 
-body {
-    height: 100vh;
-    background-color: #FEFAE0;
+main {
+    flex: 1; 
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+
+body {
+    height: 100vh;
+    background-color: rgb(255, 248, 202);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .container {
-    text-align: center;
+    text-align: left;
+    background-color: #fffae0;
+    padding: 40px;
+    border-radius: 20px;
+    gap: 80px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: row;
+}
+
+.LHS {
+    text-align: left;
     background-color: #FAEDCD;
     padding: 40px;
     border: 6px solid #D4A373;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+}
+
+.LHS h2 {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.RHS {
+    text-align: left;
+    background-color: #FAEDCD;
+    padding: 40px;
+    border: 6px solid #D4A373;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+}
+
+.RHS h2 {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.required {
+  color: red;
 }
 
 .center-image {
@@ -38,4 +97,30 @@ h1 {
 p {
     font-size: 1.2em;
     color: rgb(64, 63, 63);
+}
+
+.container label,
+.container input,
+.container button,
+.container a {
+    margin-bottom: 15px;
+}
+
+.container input {
+    padding: 8px;
+    border: 2px solid #D4A373;
+    border-radius: 5px;
+}
+
+.container button {
+    background-color: #D4A373;
+    color: white;
+    border: 2px solid #a07851;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.container button:hover {
+    background-color: #bc8b5d;
 }
