--- a/info/style.css
+++ b/info/style.css
@@ -35,8 +35,11 @@ a {
     display: flex;
     flex-direction: column; /* I needed to add this to ensure that the title went above the image / txt*/
     margin: 10px;
-    height: 200px;
-    width: 400px;
+    height: 300px;
+    width: 600px;
+    padding-top:20px;
+    padding-bottom:20px;
+    /* padding: 80px; */
 }
 
 .individualTransitOptionTitle {
@@ -55,7 +58,7 @@ a {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: center;
-    row-gap: 50px; /* this is gap btwn boxes */
+    row-gap: 75px; /* this is gap btwn boxes */
     column-gap: 100px; 
     padding: 40px; /* this is gap between header and grid */
     
@@ -100,8 +103,11 @@ a {
 
 .contentWithinBox {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     align-items: top; /* this makes the image / text higher up vertically  */
-    gap: 20px;
+    gap: 40px;
 }
 
 #rightSideContentWithinBoxConcordCoach {
@@ -134,4 +140,20 @@ a {
     justify-content: center;
     gap: 15px;
 }
+
+.main a {
+    background-color:  #bc8b5d;
+    font-family: Sans-serif;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    cursor: pointer;
+}
+
+.infoLinks a:hover {
+    background-color:  #FEFAE0;
+    cursor: pointer;
+}
+
 
