--- a/suggest/style.css
+++ b/suggest/style.css
@@ -83,6 +83,8 @@ textarea {
   cursor: pointer;
   padding: 10px 20px;
   font-size: 18px;
+  width: 110px;
+  height: 50px;
 }
 
 #new-form-button {
