--- a/style.css
+++ b/style.css
@@ -17,20 +17,19 @@ a, h1, h2, p, span {
 p.slogan{
     font-size: 25px;
     color: rgb(64, 63, 63);
-    /* font-style: italic; */
-    /* text-shadow: -1px -1px 0 #D4A373, 1px -1px 0 #D4A373, -1px 1px 0 #D4A373, 1px 1px 0 #D4A373; */
 }
-.card .hover-text {
+
+/* .card .hover-text {
     display: none;
     text-align: center;
     font-size: 1em;
     color: #333;
     margin-top: 10px;
-}
+} */
 
-.card:hover .hover-text {
+/* .card:hover .hover-text {
     display: block;
-}
+} */
 
 .hero {
     display: flex;
